--- a/config/database.yml
+++ b/config/database.yml
@@ -13,20 +13,20 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: root
-  password: root
-  socket: /var/run/mysqld/mysqld.sock
+  username: nayigaad_anurag #root
+  password: anurag #root
+  #socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
-  database: nutri_development
+  database: nayigaad_nutri_development  #nutri_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: nutri_test
+  database: nayigaad_nutri_test #nutri_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: nutri_production
-  username: nutri
-  password: <%= ENV['NUTRI_DATABASE_PASSWORD'] %>
+  database: nayigaad_nutri_production #nutri_production
+  username: nayigaad_anurag #root
+  password: anurag #root
